--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,5 +10,13 @@
 		width: 50px;
 		height: 50px;
 		cursor: pointer;
-		transition: background-color 0.3s;
+		transition: background-color 0.6s;
+}
+
+.top-btn:hover {
+		opacity: 0.9;
+}
+
+.top-btn .triangle {
+		width: auto;
 }
