--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
+	--primary-clr: #26a8f9;
 
-	--font-clr: #000;
+	--body-bg-clr: rgb(251, 251, 251);
+	--body-dark-bg-clr: rgb(0, 0, 0);
+
+	--header-bg: rgba(0, 0, 0, 0.1);
+	--header-white-bg: rgba(250, 250, 250, 0.575);
+
+	--dark-btn-clr: rgba(0, 0, 0, 0.918);
+	--light-btn-clr: rgba(255, 255, 255, 0.918);
+
+	--dark-font-clr: #000;
+	--light-font-clr: #fff;
 	--transparent-btn: rgba(0, 0, 0, 0.1);
+	--border-clr: rgb(0, 0, 0);
 }
 
 body {
 	font-family: 'Space Mono', 'Poppins', sans-serif;
+	box-sizing: border-box;
+	margin-left: 20px;
+	margin-right: 20px;
+	text-align: justify;
+	background-color: var(--body-bg-clr);
+	color: var(--dark-font-clr);
+}
+
+a {
+	text-decoration: none;
+	color: var(--primary-clr);
+}
+
+a:hover {
+	text-decoration: underline;
 }
