--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,22 +1,33 @@
+footer {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+		/* display: flex; */
+	background-color: var(--black-clr);
+	color: var(--white-clr);
+	padding: 20px 0;
+	text-align: center;
+	align-items: center;
+}
+
 .top-btn {
-		position: fixed;
-		bottom: 20px;
-		right: 20px;
-		z-index: 1000;
-		background-color: var(--transparent-btn);
-		color: var(--black-clr);
-		border: none;
-		border-radius: 50%;
-		width: 50px;
-		height: 50px;
-		cursor: pointer;
-		transition: background-color 0.6s;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	z-index: 1000;
+	background-color: var(--transparent-btn);
+	color: var(--black-clr);
+	border: none;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+	transition: background-color 0.6s;
 }
 
 .top-btn:hover {
-		opacity: 0.9;
+	opacity: 0.9;
 }
 
 .top-btn .triangle {
-		width: auto;
+	width: auto;
 }
