--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,4 +1,7 @@
 section {
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,4 +32,30 @@ section {
 	flex-direction: column;
 	justify-content: left;
 	width: 60%;
+}
+
+.hello-world {
+	margin: 0;
+	font-size: 2.5rem;
+	font-weight: 700;
+}
+
+.name {
+	margin: 0;
+	font-weight: 700;
+}
+
+.name::after {
+  content: "";
+  width: 8px;
+  height: 10px;
+  background: var(--dark-font-clr);
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
 }
