--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,10 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+	margin: 0 0 5% 5%;
+	height: auto;
+	width: 90%;
 }
 
 .container {
@@ -19,12 +22,27 @@ section {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 40%;
+	width: 45%;
 }
 
 .profile-view img {
-	width: 100%;
+	margin: 0 0 10% 0%;
+	width: 90%;
+	box-shadow: .1px .4px 0 .4px var(--dark-font-clr);
 	border-radius: 50%;
+	animation: float 5s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-5px);
+	}
+	100% {
+		transform: translateY(0);
+	}
 }
 
 .introduction {
@@ -40,22 +58,77 @@ section {
 	font-weight: 700;
 }
 
+.welcome-text {
+	display: inline-flex;
+	flex-direction: row;
+	text-align: left;
+}
+
 .name {
 	margin: 0;
-	font-weight: 700;
+	color: var(--dark-grey-font-clr);
+	font-weight: 600;
 }
 
-.name::after {
-  content: "";
-  width: 8px;
-  height: 10px;
-  background: var(--dark-font-clr);
+.caret {
   display: inline-block;
-  animation: cursor-blink 1.5s steps(2) infinite;
+  width: 5px;
+  height: 1em;
+  background-color: #333;
+  animation: blink 1.5s steps(2, start) infinite;
 }
 
-@keyframes cursor-blink {
-  0% {
-    opacity: 0;
+/* Blinking animation */
+@keyframes blink {
+  to {
+    visibility: hidden;
   }
+}
+
+
+
+.skill1, .skill2, .skill3 {
+	box-shadow: inset 0 0 0 2px var(--dark-font-clr);
+	color: var(--light-font-clr);
+	display: inline-block;
+	border-radius: 50px;
+	padding: 5px 15px;
+	margin: 5px;
+}
+
+span.skill1 {
+	background-color: var(--span-green-clr);
+}
+
+span.skill2 {
+	background-color: var(--span-blue-clr);
+}
+
+span.skill3 {
+	background-color: var(--span-red-clr);
+}
+
+@media screen and (max-width: 768px) {
+	.container {
+		flex-direction: column;
+	}
+
+	.profile-view {
+		width: 100%;
+	}
+
+	.profile-view img{
+		width: 70%;
+	}
+	.introduction {
+		width: 100%;
+	}
+
+}
+
+@media screen and (max-width: 450px) {
+	.welcome-text {
+		flex-direction: column;
+	}
+
 }
