--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,9 @@
 	--red-circle-clr: #d82a2a;
 	--grey-circle-clr: #dcdcdc7b;
 
+	--grey-link: #5f5f5f;
+  --dark-grey-link: #505050;
+
 	--transparent-btn: rgba(0, 0, 0, 0.1);
 	--border-clr: rgb(0, 0, 0);
 
@@ -72,13 +75,61 @@ section {
 	width: 90%;
 }
 
-a {
-	text-decoration: none;
-	color: var(--primary-clr);
+.link-grp {
+	text-align: left;
 }
 
+p a {
+	display: inline-block;
+}
+
+a {
+	color: var(--primary-clr);
+	margin-right: 10px;
+}
+
+.arrow-link {
+	display: inline-flex;
+	align-items: center;
+	text-decoration: none;
+	color: var(--grey-link);
+	gap: 0.5rem;
+	position: relative;
+	margin-right: 20px;
+	transition: color 0.3s ease;
+}
+
+.arrow-link::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0.1rem;
+	width: 100%;
+	height: 1px;
+	background-color: var(--grey-link);
+	transition: background-color 0.3s ease;
+}
+
+.arrow-link img {
+	width: 15px;
+	height: 15px;
+}
+
+.arrow-link:hover {
+	color: var(--dark-grey-link);
+}
+
+.arrow-link:hover::after {
+  background-color: var(--dark-grey-link); /* Change underline color */
+}
+
+.arrow-link:hover img {
+  filter: grayscale(100%) brightness(0.7); /* Make image darker */
+}
+
+
 a:hover {
-	color: #2d4dff;
+	color: var(--dark-grey-font-clr);
 }
 
 .column {
@@ -104,6 +155,7 @@ a:hover {
 	position: relative;
 	border-radius: 20px;
 	padding: 4px 12px;
+	margin-right: 10px;
 }
 
 .green{
