--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 :root {
 	--primary-clr: #26a8f9;
@@ -37,6 +38,7 @@
 }
 
 body {
+	font-size: 1.2rem;
 	font-family: 'Space Mono', 'Poppins', sans-serif;
 	box-sizing: border-box;
 	margin-left: 20px;
@@ -44,6 +46,15 @@ body {
 	text-align: justify;
 	background-color: var(--body-bg-clr);
 	color: var(--dark-font-clr);
+}
+
+h1 {
+	font-family: 'Bebas Neue', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+	z-index: -1;
+	/* position: absolute; */
+	opacity: 0.3;
 }
 
 section {
@@ -61,7 +72,21 @@ section {
 	height: auto;
 	width: 90%;
 	animation: glassEffect 1.5s ease-in-out infinite;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	animation: fadeIn 1s ease-in-out;
 }
+
+@keyframes fadeIn {
+	0% {
+		transform: translateY(-20px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
 
 @keyframes glassEffect {
 	0% {
@@ -89,7 +114,8 @@ a:hover {
 }
 
 h1 {
-	font-size: 2.5rem;
+	margin: 50px 0;
+	font-size: 5rem;
 }
 
 h2 {
@@ -101,10 +127,7 @@ h3 {
 }
 
 
-@media screen and (min-width: 960px) {
-	body {
-		font-size: 1.2rem;
-	}
+@media screen and (max-width: 960px) {
 
 	section {
 		margin: 0 5% 5% 5%;
