--- a/src/pages/Publications/Publications.css
+++ b/src/pages/Publications/Publications.css
@@ -1,8 +1,7 @@
 .title {
-	font-size: 2em;
 	font-weight: bold;
 	margin-bottom: 20px;
-	text-align: center;
+	text-align: left;
 	animation: fadeIn 1s ease-in-out;
 }
 
