--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.no-select {
+  user-select: none; /* Disable text selection */
+  -webkit-user-select: none; /* For Safari */
+  -ms-user-select: none; /* For older versions of IE */
+}
+
 .link-grp {
 	text-align: left;
 }
