--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,14 +4,14 @@
 	justify-content: center;
 	align-items: center;
 	width: 45%;
-}
 
-.profile-view img {
-	margin: 0 0 10% 0%;
-	width: 90%;
-	box-shadow: .1px .4px 0 .4px var(--dark-font-clr);
-	border-radius: 50%;
-	animation: float 5s ease-in-out infinite;
+	img {
+		margin: 0 0 10% 0%;
+		width: 90%;
+		box-shadow: .1px .4px 0 .4px var(--dark-font-clr);
+		border-radius: 50%;
+		animation: float 5s ease-in-out infinite;
+	}
 }
 
 @keyframes float {
@@ -42,6 +42,10 @@
 	display: inline-flex;
 	flex-direction: row;
 	text-align: left;
+
+	@media screen and (max-width: 860px) {
+		flex-direction: column;
+	}
 }
 
 .name {
@@ -51,21 +55,18 @@
 }
 
 .caret {
-  display: inline-block;
-  width: 5px;
-  height: 1em;
-  background-color: #333;
-  animation: blink 1.5s steps(2, start) infinite;
+	display: inline-block;
+	width: 5px;
+	height: 1em;
+	background-color: #333;
+	animation: blink 1.5s steps(2, start) infinite;
 }
 
-/* Blinking animation */
 @keyframes blink {
-  to {
-    visibility: hidden;
-  }
+	to {
+		visibility: hidden;
+	}
 }
-
-
 
 .skill1, .skill2, .skill3 {
 	box-shadow: inset 0 0 0 2px var(--dark-font-clr);
@@ -74,38 +75,31 @@
 	border-radius: 50px;
 	padding: 5px 15px;
 	margin: 5px;
-}
 
-span.skill1 {
-	background-color: var(--span-green-clr);
-}
+	&.skill1 {
+		background-color: var(--span-green-clr);
+	}
 
-span.skill2 {
-	background-color: var(--span-blue-clr);
-}
+	&.skill2 {
+		background-color: var(--span-blue-clr);
+	}
 
-span.skill3 {
-	background-color: var(--span-red-clr);
+	&.skill3 {
+		background-color: var(--span-red-clr);
+	}
 }
 
 @media screen and (max-width: 960px) {
 	.profile-view {
 		width: 100%;
+
+		img {
+			margin: 20px 0 20px 0px;
+			width: 50%;
+		}
 	}
 
-	.profile-view img{
-		margin: 20px 0 20px 0px;
-		width: 50%;
-	}
 	.introduction {
 		width: 100%;
 	}
-
-}
-
-@media screen and (max-width: 860px) {
-	.welcome-text {
-		flex-direction: column;
-	}
-
 }
