--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,11 +6,10 @@
 	margin-bottom: 40px;
 }
 
-.chart {
-	padding: 1em;
-	border-radius: 5px;
-	// font-size: 16px;
 
+
+.chart {
+	border-radius: 5px;
 
 	.part {
 		 display: flex;
@@ -18,14 +17,25 @@
 
 			> .label {
 				flex: 1;
-				flex-basis: 25%;
+				flex-basis: 35%;
 				text-align: right;
 				padding-right: 1em;
 				margin: 0.5em 0;
 				height: 2em;
-				line-height: 2em;
+				// line-height: 2em;
 				// color: $color-label;
 				font-weight: 600;
+				@media screen and (max-width: 480px) {
+					flex-basis: 35%;
+				}
+
+				@media screen and (min-width: 481px) and (max-width: 768px) {
+					flex-basis: 25%;
+				}
+
+				@media screen and (min-width: 769px) {
+					flex-basis: 20%;
+				}
 		 }
 
 		 .bar {
@@ -61,7 +71,7 @@
 					 transform: translateX(0%) translateY(-50%);
 					 z-index: 1;
 					 color: #FFF;
-					 font-weight: 600;
+					 font-weight: 500;
 				}
 		 }
 
