--- a/src/index.scss
+++ b/src/index.scss
@@ -54,6 +54,7 @@ body {
 }
 
 h1 {
+	margin-bottom: 20px;
 	font-family: 'Bebas Neue', sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -129,7 +130,7 @@ h3 {
 	}
 
 	h1 {
-		font-size: 3rem;
+		font-size: 4rem;
 	}
 
 	h2 {
@@ -166,7 +167,7 @@ h3 {
 	}
 
 	h1 {
-		font-size: 2.5rem;
+		font-size: 3rem;
 	}
 
 	h2 {
@@ -203,7 +204,7 @@ h3 {
 	}
 
 	h1 {
-		font-size: 2rem;
+		font-size: 3rem;
 	}
 
 	h2 {
