--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 :root {
+	color-scheme: light;
 	--primary-clr: #26a8f9;
 
 	--body-bg-clr: rgb(251, 251, 251);
