--- a/src/index.scss
+++ b/src/index.scss
@@ -74,11 +74,12 @@ section {
 	justify-content: center;
 	align-items: center;
 	min-height: 90vh;
-	margin: 0 0 5% 5%;
+	margin: 0 2.5% 5% 2.5%;
+	// width: 90%;
 	height: auto;
-	width: 90%;
 	animation: glassEffect 1.5s ease-in-out infinite, fadeIn 1s ease-in-out;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 @keyframes fadeIn {
@@ -127,7 +128,7 @@ h3 {
 
 @media screen and (max-width: 960px) {
 	section {
-		margin: 0 5% 5% 5%;
+		margin: 0 2% 5% 2%;
 	}
 
 	h1 {
@@ -164,7 +165,7 @@ h3 {
 	}
 
 	section {
-		margin: 0 5% 5% 5%;
+		margin: 0 1% 4% 1%;
 	}
 
 	h1 {
@@ -201,7 +202,8 @@ h3 {
 	}
 
 	section {
-		margin: 0 5% 5% 5%;
+		width: 100%;
+		margin: 0 0 3% 0;
 	}
 
 	h1 {
