--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -10,7 +10,7 @@
 
   .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     &.with-modal {
       flex-direction: row;
