--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.at-company {
+  color: var(--span-red-clr);
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+}
+
+
 @keyframes float {
   0% {
     transform: translateY(0);
