Loader integration complete

--- a/src/utils/Loader.astro
+++ b/src/utils/Loader.astro
@@ -3,7 +3,7 @@ import "../styles/Loader.scss";
 ---
 
 <!-- Loader -->
-<div class="looder-container">
+<div class="loader-container" id="loader">
   <div class="loader"></div>
 </div>
 
