--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Loader from "../utils/Loader.astro";
+import Loader from "../components/Loader.astro";
 ---
 
 <BaseLayout title="Abxfolio">
