--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Loader from "../components/Loader.astro";
 ---
 
-<BaseLayout title="Abxfolio">
-  <Loader />
-</BaseLayout>
+<BaseLayout title="Abxfolio" />
