--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,6 @@
 ---
+import Loader from "../components/Loader.astro";
+
 const { title } = Astro.props;
 ---
 
@@ -11,7 +13,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+
+  <body id="content" class="hidden">
+    <Loader />
     <slot />
   </body>
 </html>
