Loader bug fix and home page template

--- a/src/components/Loader.astro
+++ b/src/components/Loader.astro
@@ -6,7 +6,7 @@ import "../styles/Loader.scss";
   <div class="loader"></div>
 </div>
 
-<script is:inline>
+<script>
   window.addEventListener("load", () => {
     const loader = document.getElementById("loader");
     const content = document.getElementById("content");
