--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Loader from "../components/Loader.astro";
 
+import "../styles/global.scss";
 const { title } = Astro.props;
 ---
 
@@ -14,8 +15,10 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
 
-  <body id="content" class="hidden">
+  <body>
     <Loader />
-    <slot />
+    <div id="content" class="hidden">
+      <slot />
+    </div>
   </body>
 </html>
