Home page styles and content justification bug fix

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import Loader from "../components/Loader.astro";
 
 import "../styles/global.scss";
+import "../styles/index.scss";
 const { title } = Astro.props;
 ---
 
